2007-11-16  Michael Banck  <mbanck@gmx.net>

	* src/formats/xml/Makefile.am (INCLUDES): Added
	-I$(top_builddir)/include.
	* src/formats/xml/Makefile.in: Regenerated.

2007-11-15  Chris Morley

	Update Windows build files.
	
	* src/formats/pngformat.cpp(TargetClassDescription): modify so 
	that options for OBMol appears in GUI.
	
2007-11-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/griddata.cpp, src/grid.cpp: Change to new SetLimits method
	for assigning axes, origin -- everything required by OBFloatGrid.

	* src/formats/gausscubeformat.cpp: Use it.

	* include/openbabel/Makefile.am: Make sure to install new headers
	griddata.h, op.h.

2007-11-13  Chris Morley

	* src/formats/pngformat.cpp: Remove class name in declaration
	as patch #1830826 from LI Daobing. I haven't yet found how to
	get a warning on this in Visual C++.

2007-11-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.am: Add "ops" code introduced by Chris, including
	gen3d coordinate generation.

	* src/formats/chemkinformat.cpp
	(ChemKinFormat::ParseReactionLine): Added some compilation fixes
	for GCC.

	* src/formats/Makefile.* : Enable compilation of png, rxn, and
	chemkin formats.

2007-11-11  Chris Morley

	Added gen3D.cpp, a wrapper for OBBuilder to make plugin option.
	
2007-11-11  Chris Morley

	* src/formats/chemkinformat.cpp: Reading rewritten so that it
	is like other formats - separate ReadChemObject and
	ReadMolecule. Allows -f and -l options and, potentially,
	filtering of reactions.
	Many parsing changes on reading, incl allowing species names 
	containing spaces with simple input.
	On writing extra option to omit zero rate reactions, formatting
	changes and correct loss of first species in list bug.
	
	* src/formats/xml/cmlreactformat.cpp: Separate out code as
	WriteRateData.
	Add molecules to list even if to be immediately output, so that
	they can benefit from being combined with other inputs.